# server-api-for-nllb-200-distilled-600M-main

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  requirements.txt
src/api/: dependencies.py  middleware.py  routes.py
src/api/routes/: translation.py
src/config/: settings.py
src/models/: schemas.py
src/services/: translation_service.py
