[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nllb-200-api"
version = "1.0.0"
description = "FastAPI server for NLLB-200 translation model"
authors = [
    {name = "Satcomx00-x00", email = "raspsatcombot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "pydantic_settings",
    "uvicorn[standard],
    "transformers",
    "torch",
    "pydantic",
    "python-dotenv",
    "loguru",
    "sentencepiece",
    "accelerate",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.25.0",
    "mypy>=1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

