[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nllb-200-api"
version = "1.0.0"
description = "FastAPI server for NLLB-200 translation model"
authors = [
    {name = "Satcomx00-x00", email = "yourmail@domain.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.7.1",
    "torchvision",
    "accelerate==1.8.1",
    "ctranslate2==4.6.0",
    "transformers==4.55.2",
    "sentencepiece==0.2.1",
    "tokenizers==0.21.2",
    "safetensors==0.5.3",
    "huggingface-hub==0.34.4",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "numpy==2.3.1",
    "requests==2.32.4",
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.25.0",
    "mypy>=1.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

